<resources>
    <string name="app_name">Messenger</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="your_info">Your Info</string>
    <string name="what_to_do">Please enter your name, tag and upload a photo.</string>
    <string name="user_photo">User\'s photo</string>
    <string name="name">Name</string>
    <string name="tag">Tag</string>
    <string name="sign_up">Sign up</string>
    <string name="user_avatar">User avatar</string>
    <string name="new_chat">New chat</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_theme">Change theme</string>
    <string name="enter_user_tag">Enter user\'s tag</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="tag_is_occupied">This tag is occupied by another user. Come up with another one</string>
    <string name="message">Message</string>
    <string name="send_or_attach_button">Send or attach button</string>
    <string name="change_this_text">Change this text</string>
    <string name="what_you_can_do">You can edit your personal information here</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_updated">Your profile has been updated</string>
    <string name="avatar">Avatar</string>
    <string name="message_notification_channel_id">message_channel</string>
    <string name="message_notification_channel_name">Message</string>
</resources>