<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundMainColor"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".fragments.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_and_avatar_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:foregroundGravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/your_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_info"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/what_to_do"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/what_to_do"
                android:textColor="?plainTextColor"
                app:layout_constraintStart_toStartOf="@id/your_info"
                app:layout_constraintTop_toBottomOf="@id/your_info"
                app:layout_constraintWidth_percent="0.48" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/blue"
                android:contentDescription="@string/user_photo"
                android:scaleType="center"
                android:src="@drawable/ic_camera" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_and_avatar_block" />

    <EditText
        android:id="@+id/tag_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:theme="@style/MyEditTextTheme"
        android:hint="@string/tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:textSize="18sp"
        app:backgroundTint="?blue"
        android:text="@string/sign_up"
        android:textColor="?white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>