<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundMainColor"
    android:fillViewport="true"
    tools:context=".view.fragment.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="50dp"
            android:paddingEnd="30dp"
            android:paddingBottom="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.27">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_and_avatar_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/your_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_info"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/what_to_do"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/what_to_do"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/change_this_text"
                    android:textColor="?plainTextColor2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/your_info"
                    app:layout_constraintWidth_percent="0.48" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/no_image"
                        android:contentDescription="@string/user_photo"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="your_info,what_to_do" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="your_info,what_to_do" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="your_info,what_to_do" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:theme="@style/MyEditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_and_avatar_block" />

            <EditText
                android:id="@+id/tag_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/tag"
                android:importantForAutofill="no"
                android:inputType="text"
                android:theme="@style/MyEditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

            <Button
                android:id="@+id/action_button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="50dp"
                android:text="@string/change_this_text"
                android:textColor="?white"
                android:textSize="18sp"
                app:backgroundTint="?blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tag_edit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loading_window"
            layout="@layout/loading_window"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>